# SeetaFace-OnlineSensations

SeetaFaceEngine/: .test.sh.swp  .test1.sh.swp  1.txt  Makefile  seetaface.sh
SeetaFaceEngine/FaceAlignment/: CMakeLists.txt  Makefile  cmake_install.cmake  data1.txt
SeetaFaceEngine/FaceAlignment/src/test/: face_alignment_test.cpp  face_alignment_test.cpp.autosave
SeetaFaceEngine/FaceDetection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  facedet_test
SeetaFaceEngine/FaceIdentification/: libviplnet.so.4.5  not.txt  test_list.txt  网红
SeetaFaceEngine/FaceIdentification/data/test_face_recognizer/: test_file_list.txt  test_file_list_boy.txt  test_file_list_cute.txt  test_file_list_man.txt  test_file_list_sister.txt
SeetaFaceEngine/FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp  test_list.txt
SeetaFaceEngine/build-FaceIdentification-unknown-Default/: CMakeCache.txt
